--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,33 @@
 @tailwind utilities;
 
 
+/* ScrollBar.css */
+
+/* Track */
+::-webkit-scrollbar {
+    width: 6px; /* Adjust the width as needed */
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background-color: #000000; /* Color of the scrollbar handle */
+    border-radius: 3px; /* Rounded corners of the handle */
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #000000; /* Color of the handle on hover */
+ 
+  }
+  
+  /* Track on hover */
+  ::-webkit-scrollbar-track:hover {
+    background-color: #f1f1f1; /* Color of the track on hover */
+  }
+  
+  /* Handle when dragging */
+  ::-webkit-scrollbar-thumb:active {
+    background-color: #000000; /* Color of the handle when dragging */
+    
+  }
+  
