--- a/src/app/component/FlashSales/FlashSales.css
+++ b/src/app/component/FlashSales/FlashSales.css
@@ -1,20 +1,22 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-
-/* ScrollBar.css */
-
-/* Track */
-::-webkit-scrollbar {
-    width: 6px; /* Adjust the width as needed */
+.flash_Sale_Container::-webkit-scrollbar {
+    height: 8px; /* Adjust the width as needed */
+   
   }
+
+  .flash_Sale_Container{
+    height: 400px;
+  }
+  @media screen and (max-width:1025px) {
+    .flash_Sale_Container{
+      height: 440px;
+    } 
+  }
+
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
     background-color: #000000; /* Color of the scrollbar handle */
-   /* Rounded corners of the handle */
+/* Rounded corners of the handle */
   }
   
   /* Handle on hover */
@@ -25,12 +27,13 @@
   
   /* Track on hover */
   ::-webkit-scrollbar-track:hover {
-    background-color: #f1f1f1; /* Color of the track on hover */
+    background-color: white; /* Color of the track on hover */
+   
   }
   
   /* Handle when dragging */
   ::-webkit-scrollbar-thumb:active {
     background-color: #000000; /* Color of the handle when dragging */
-    
+  
   }
   
